--- a/content/endmatter/appendix.tex
+++ b/content/endmatter/appendix.tex
@@ -36,7 +36,7 @@ in the correct location. % FIXME
 %     - Bimodal about center
 %     - Skewed?
 
-\begin{table}[!t]
+\begin{table}[htbp]
     % increase table row spacing, adjust to taste
     \renewcommand{\arraystretch}{1.3}
 
