--- a/content/chapter2-experimental-design.tex
+++ b/content/chapter2-experimental-design.tex
@@ -425,9 +425,9 @@ differences, as well as making it trivial to calculate loss by changing the
     \text{.}\label{eq:adjusted-loss}
 \end{align}
 
-% TODO: Talk about distribution range restrictions, such as Gaussian being
-% restricted between -1 and 1. I may want to restrict both experts and
-% the untrained to the same value to simplify things.
+Additionally, all extents can be set to 1, which can easily be scaled to any
+desired number simply my multiplying by that number.
+This, again, should not make any meaningful differences to the final analysis.
 
 \subsection{Data Collection}\label{subsec:data-collection}
 % Steps
