Some Analysis work

--- a/content/chapter2-experimental-design.tex
+++ b/content/chapter2-experimental-design.tex
@@ -479,12 +479,20 @@ as the estimated truth, the error, as well as the rest of the
 % TODO: Caveats
 
 \subsection{Analysis}\label{subsec:analysis}
-% TODO: What is done after an experiment?
+Once all data is collected, analyses will be performed in order to answer a
+number of questions.
+\begin{enumerate}[label=\textbf{Q\arabic*}., leftmargin=2\parindent]
+    \item Which combinations of mechanisms are better than simply averaging
+    all agents?
+    \item How many inactive agents per proxy should be used?
+    \item Which combinations of mechanisms provide the best accuracy for the
+    least cost?
+\end{enumerate}
 
-% FIXME: This might need to be moved to Chapter 4
-
+% TODO: Fill me out more
 
 \section{Further Work and Improvements}\label{sec:further-work-and-improvements}
+% FIXME: This might need to be moved to Chapter 4
 % - Multiple levels of expertise. Expert voters could have varying levels of
 % accuracy, allowing for more complex systems.
 % - (If I decide to restrict experts and untrained to the same mins and maxes)
