Updated appendix tables

--- a/content/chapter2-experimental-design.tex
+++ b/content/chapter2-experimental-design.tex
@@ -185,7 +185,7 @@ interval $[\truth - 10, \truth + 10]$.
 While the extent determines the general boundaries, some distributions allow
 numbers slightly outside these ranges.
 For these distributions, the percent of votes inside the extents are
-specified in \autoref{tab:voting-distributions}.
+specified in \autoref{tab:distributions-percent-inside-extents}.
 These extents are not meant to be known by the system, but are rather an
 estimation of the range of error about \truth\ a measurement in the real world
 might have.
@@ -193,7 +193,7 @@ might have.
 The vote distribution determines which distribution is used by the agent when
 attempting to measure \truth.
 The distributions used in this study are found
-in~\autoref{tab:voting-distributions}.
+in~\autoref{tab:distributions}.
 These distributions, combined with the extent, have a large influence on the
 agent's ability to measure \truth.
 
