--- a/content/endmatter/appendix.tex
+++ b/content/endmatter/appendix.tex
@@ -41,7 +41,7 @@ in the correct location. % FIXME
     \renewcommand{\arraystretch}{1.3}
 
     \caption{List of distributions used by agents to vote.}
-    \label{tab:voting-distributions}
+    \label{tab:distributions-percent-inside-extents}
 
     \centering
     \begin{tabular}{|c|c|c|}
@@ -59,3 +59,14 @@ in the correct location. % FIXME
 
 \appendixsection{Distributions used}
 % TODO: Add graphs of distributions used
+\begin{table}[htbp]
+    % increase table row spacing, adjust to taste
+    \renewcommand{\arraystretch}{1.3}
+
+    \caption{List of distributions used by agents to vote.}
+    \label{tab:distributions}
+
+    \centering
+    \begin{tabular}{|c|c|c|}
+    \end{tabular}
+\end{table}
