More about extents

--- a/content/chapter2-experimental-design.tex
+++ b/content/chapter2-experimental-design.tex
@@ -427,6 +427,8 @@ differences, as well as making it trivial to calculate loss by changing the
 
 Additionally, all extents can be set to 1, which can easily be scaled to any
 desired number simply my multiplying by that number.
+Using the same extents also makes it much easier to determine where an agent
+can vote since the interval will be $[-1, 1]$.
 This, again, should not make any meaningful differences to the final analysis.
 
 \subsection{Data Collection}\label{subsec:data-collection}
