Fixed appendix reference

--- a/content/endmatter/appendix.tex
+++ b/content/endmatter/appendix.tex
@@ -27,8 +27,9 @@
 
 \appendixsection{Percent inside Extents}
 % TODO: Add description of table
-This is placeholder text to ensure \autoref{tab:voting-distributions} stays
-in the correct location. % FIXME
+This is placeholder text to ensure
+\autoref{tab:distributions-percent-inside-extents} stays in the correct
+location. % FIXME
 
 % - Distribution of votes
 %     - Uniform
