Fixed typo in chapter 1

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -97,8 +97,8 @@ expensive measurements.
 
 However, proxy voting is not without its flaws.
 \etal{Gölz} investigated a weakness in liquid democracy dubbed `super voters'
-~\cite[para.~1.3]{Golz2021}, which are proxies that receive such a large amount
-of power.
+~\cite[para.~1.3]{Golz2021}, which are proxies that receive an extremely large
+amount of power.
 This can be problematic because the result of a system will be too biased
 towards the super voter.
 For this paper's purposes, a poor distribution of measurements will make one
