--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -130,8 +130,9 @@ them as proxies.
 goes on to discuss how many of such proxies would be needed under random
 selection for a sufficiently accurate opinion to be made.
 These estimates range from 500 to 1000~\cite[para.~3.2]{Mueller1972}, and
-while this study uses preassigned proxies, these proxies' error will be
-random and so \etal{Mueller}'s estimates may come in to play.
+while this study uses preassigned proxies, these proxies' will have random
+error in their estimations and so \etal{Mueller}'s estimates may come in to
+play.
 However, a primary goal of this paper is to use far fewer measurements than the
 quoted 500, as that many measurements would likely be far more expensive than
 simply using a single, more costly form of measurement with better accuracy.
