--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -138,7 +138,7 @@ quoted 500, as that many measurements would likely be far more expensive than
 simply using a single, more costly form of measurement with better accuracy.
 
 Directly related to this paper,\ \etal{Cohensius}~\cite{Cohensius2017} explore
-proxy voting with infinite voters using set of \textit{mechanisms}, also
+proxy voting with infinite voters using a set of \textit{mechanisms}, also
 known as \textit{voting rules}.
 These are algorithms used to consolidate votes into the end result.
 The mechanisms discussed by \etal{Cohensius} include mean\footnote{An
