Fixed some typos

--- a/content/chapter2-experimental-design.tex
+++ b/content/chapter2-experimental-design.tex
@@ -175,10 +175,10 @@ produce~\systemtruth.
 
 \subsubsection{Agent Parameters}\label{subsubsec:agent-parameters}
 Similar to systems, each type of agent will have a different set of parameters.
-There are two parameters that make creates the most distinction between
+There are two parameters that creates the most distinction between
 agents: their vote distribution and their extents.
 
-The extents determine the maximum and minimum value away from \truth the
+The extents determine the maximum and minimum value away from \truth\ the
 agent is able to vote.
 For example, an agent with an extent of 10 could vote anywhere in the
 interval $[\truth - 10, \truth + 10]$.
