--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -155,7 +155,7 @@ agent could decide whether it served as a proxy or not.
 the voting mechanisms used as well as introduces an additional type of
 mechanism: weighting mechanisms.
 This study also explores using finite voters instead of infinite as discussed
-in~\cite{Cohensius2017}, as well as uses a set of proxies instead of random or
-strategic participation.
+in~\cite{Cohensius2017}, and explores the use of a set of proxies instead of
+employing random or strategic participation.
 While the use of finite voters in this case could be viewed as a two-layered
 form of liquid democracy, this idea is not explored by this paper.
