--- a/content/chapter2-experimental-design.tex
+++ b/content/chapter2-experimental-design.tex
@@ -202,7 +202,7 @@ This cost is an arbitrary unit used to represent the monetary cost, time
 required, and/or any other value required by the agent.
 The cost can be assigned or reassigned at any time before calculating the
 system cost since the system itself does not need to know the cost of the
-agents it's using to estimate~\truth.
+agents it is using to estimate~\truth.
 
 % - Dimensions?
 % - Seed
