--- a/content/chapter2-experimental-design.tex
+++ b/content/chapter2-experimental-design.tex
@@ -277,7 +277,7 @@ is described by
 \end{equation}
 While a seemingly simple mechanism, this voting mechanism combined with some
 weighting mechanism allows for common voting systems.
-For example, plurality used with \hyperref[para:borda]{borda weighting}
+For example, plurality used with \hyperref[para:borda]{Borda weighting}
 provides the Borda count system.
 
 \mechanismheader{Instant Runoff}\label{para:candidate-instant-runoff}
