Fixed errors Danielle noticed

--- a/content/chapter2-experimental-design.tex
+++ b/content/chapter2-experimental-design.tex
@@ -365,7 +365,7 @@ This mechanism uses the negative distance between the proxies and an agent as
 the weight.
 The negative distance is used so the proxy closest to the given agent
 receives the highest weight.
-Once all distances for all agents are calculated, each weight need to be
+Once all distances for all agents are calculated, each weight needs to be
 adjusted to be positive using the formula
 \begin{equation}
     g{(\agent)} = \lvert
@@ -445,7 +445,7 @@ steps.
 
     \titleditem{Generate inactive voters}
     The system will then generate a set of inactive voters.
-    Again, the number and distribution these voters will depend on the
+    Again, the number and distribution of these voters will depend on the
     experiment's parameters and will often not be the same as the proxies'
     parameters.
     In particular, the distribution and range used will generally be
@@ -474,7 +474,7 @@ steps.
 Each combination of parameters will be run a number of times in order to obtain
 a fair spread of error for that set of parameters.
 After each iteration, the combination of parameters will be recorded as well
-as the estimated truth, the error, as well as the rest of the
+as the estimated truth, the error, and the rest of the
 \hyperref[subsec:criteria]{criteria}.
 
 % TODO: Caveats
