Simple Results outline

--- a/content/chapter3-results.tex
+++ b/content/chapter3-results.tex
@@ -11,3 +11,22 @@
 %
 
 \chapter{RESULTS}\label{ch:results}
+% TODO: Does "Best Overall" sound good, or does ". . . Analysis" sound
+% better? Or should I use something else entirely? Optimal?
+\section{Voting Mechanisms Analysis}\label{sec:best-overall-voting-mechanism}
+
+
+\section{Best Overall Weighting Mechanism}\label{sec:best-overall-weighting
+-mechanism}
+
+
+\section{Best Overall Combination}\label{sec:best-overall-combination}
+
+
+\section{Best Inactive to Proxy Ratio}\label{sec:best-inactive-to-proxy-count}
+
+
+\section{Caveat}\label{sec:caveat}
+% Explain how WeightlessAverageAll works best
+% TODO: Try to find some cirumstance where some else works better
+
