Rephrase of one of the questions

--- a/content/chapter2-experimental-design.tex
+++ b/content/chapter2-experimental-design.tex
@@ -484,8 +484,7 @@ as the estimated truth, the error, and the rest of the
 Once all data is collected, analyses will be performed in order to answer a
 number of questions.
 \begin{enumerate}[label=\textbf{Q\arabic*}., leftmargin=2\parindent]
-    \item Which combinations of mechanisms are better than simply averaging
-    all agents?
+    \item Which combinations of mechanisms work best?
     \item How many inactive agents per proxy should be used?
     \item Which combinations of mechanisms provide the best accuracy for the
     least cost?
