Added quick notes into results

--- a/content/chapter3-results.tex
+++ b/content/chapter3-results.tex
@@ -15,6 +15,8 @@
 % better? Or should I use something else entirely? Optimal?
 \section{Voting Mechanisms Analysis}\label{sec:best-overall-voting-mechanism}
 
+% Best Average mechanism
+% Best Candidate mechanism
 
 \section{Best Overall Weighting Mechanism}\label{sec:best-overall-weighting
 -mechanism}
