Added more questions

--- a/content/chapter2-experimental-design.tex
+++ b/content/chapter2-experimental-design.tex
@@ -484,8 +484,18 @@ as the estimated truth, the error, and the rest of the
 Once all data is collected, analyses will be performed in order to answer a
 number of questions.
 \begin{enumerate}[label=\textbf{Q\arabic*}., leftmargin=2\parindent]
-    \item Which combinations of mechanisms work best?
+    \item Which \hyperref[subsec:voting-mechanisms]{voting mechanism}
+    generally results in the lowest error?
+
+    \item Which \hyperref[subsec:weighting-mechanisms]{weighting mechanism}
+    generally results in the lowest error?
+
+    \item Which combinations of voting mechanism and weighting mechanism
+    produces the lowest error?
+
+    % Ratio is likely important here
     \item How many inactive agents per proxy should be used?
+
     \item Which combinations of mechanisms provide the best accuracy for the
     least cost?
 \end{enumerate}
