--- a/content/chapter3-results.tex
+++ b/content/chapter3-results.tex
@@ -11,6 +11,13 @@
 %
 
 \chapter{RESULTS}\label{ch:results}
+This chapter attempts to answer the questions previously outlined in the
+\hyperref[subsec:analysis]{Analysis} section.
+Each section is dedicated to exploring one question.
+The process used is described in each section though the process usually
+consists of using a combination of graphing, One-way ANOVA tests, and
+Student's t- or Mann-Whitney U-tests.
+
 % TODO: Does "Best Overall" sound good, or does ". . . Analysis" sound
 % better? Or should I use something else entirely? Optimal?
 \section{Voting Mechanisms Analysis}\label{sec:best-overall-voting-mechanism}
