--- a/thesis.tex
+++ b/thesis.tex
@@ -88,6 +88,9 @@
 \usepackage{util} % MDH: Contains my custom commands
 \usepackage{notations} % MDH: So I don't have to repeat myself so much
 
+\usepackage[outdir=./content/figures/]{epstopdf} % To control where figures are output
+\pdfminorversion=7 % Because epstopdf outputs as version 1.7
+
 % Set spacing around figures and tables to triple space
 \setlength{\intextsep}{2em} % Vertical space above & below [h] floats
 \setlength{\textfloatsep}{2em} % Vertical space below (above) [t] ([b]) floats
