Moved images to content folder, since all files should be local

--- a/content/endmatter/appendix.tex
+++ b/content/endmatter/appendix.tex
@@ -85,7 +85,7 @@ The distribution of square error for each voting mechanism is displayed in
 
     \centering
     \includegraphics[width=\textwidth, height=\height, keepaspectratio]
-    {../Analysis/notebooks/img/voting_mechanisms_distribution}
+    {./content/figures/voting_mechanisms_distribution}
     \caption{The distribution of squared error by voting mechanism}
     \label{fig:voting_mechanisms_distribution}
 \end{figure}
