Moved height calculations into figure

--- a/content/endmatter/appendix.tex
+++ b/content/endmatter/appendix.tex
@@ -77,14 +77,13 @@ The distribution of square error for each voting mechanism is displayed in
 \autoref{fig:voting_mechanisms_distribution}.
 
 \begin{figure}
-    \newcommand{\height}{
-        \dimexpr
-        \textheight - 2 % Could also be .9\textheight
-        \baselineskip
-    }
-
     \centering
-    \includegraphics[width=\textwidth, height=\height, keepaspectratio]
+    \includegraphics[
+        width=\textwidth,
+        height=\dimexpr
+        \textheight - 2 % Could also be .9\textheight
+        \baselineskip,
+        keepaspectratio]
     {./content/figures/voting_mechanisms_distribution}
     \caption{The distribution of squared error by voting mechanism}
     \label{fig:voting_mechanisms_distribution}
