--- a/content/endmatter/appendix.tex
+++ b/content/endmatter/appendix.tex
@@ -76,7 +76,7 @@ location. % FIXME
 The distribution of square error for each voting mechanism is displayed in
 \autoref{fig:voting_mechanisms_distribution}.
 
-\begin{figure}
+\begin{figure}[!t]
     \centering
     \includegraphics[
         width=\textwidth,
