--- a/content/endmatter/appendix.tex
+++ b/content/endmatter/appendix.tex
@@ -73,8 +73,8 @@ location. % FIXME
 \end{table}
 
 \appendixsection{Distributions of Error}
-The distribution of square error for each voting mechanism is displayed in
-\autoref{fig:voting_mechanisms_distribution}.
+The distribution of square error for each voting mechanism is displayed as a
+KDE graph in \autoref{fig:voting_mechanisms_distribution}.
 
 \begin{figure}[!t]
     \centering
