Added visualizations of error

--- a/content/endmatter/appendix.tex
+++ b/content/endmatter/appendix.tex
@@ -88,3 +88,22 @@ KDE graph in \autoref{fig:voting_mechanisms_distribution}.
     \caption{The distribution of squared error by voting mechanism}
     \label{fig:voting_mechanisms_distribution}
 \end{figure}
+
+\appendix{Visualizations}\label{chap:visualizations}
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[scale=0.5]
+    {./content/figures/expected_even_distribution_squared_error}
+    \caption{Expected squared error distribution given a uniform distribution
+    of estimates.}
+    \label{fig:expected_even_distribution_squared_error}
+\end{figure}
+
+\begin{figure}[htbp]
+    \centering
+    \includegraphics[scale=0.5]
+    {./content/figures/expected_gaussian_distribution_squared_error}
+    \caption{Expected squared error distribution given a gaussian distribution
+    of estimates.}
+    \label{fig:expected_gaussian_distribution_squared_error}
+\end{figure}
